--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <small>21 de maio de 2023</small>
       <h1>Jornada do Zero a primeira vaga</h1>
       <div>
-      <img src="assets/jornada.png" alt="kkkkkkkkkk" />
+      <img src="assets/jornada.png" alt="." />
       </div>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -47,7 +47,7 @@
       <small>21 de maio de 2023</small>
       <h1>Jornada do Zero a primeira vaga</h1>
       <div>
-      <img src="assets/jornada.png" alt="kkkkkkkkkk" />
+      <img src="assets/jornada.png" alt="." />
       </div>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -63,7 +63,7 @@
       <small>21 de maio de 2023</small>
       <h1>Jornada do Zero a primeira vaga</h1>
       <div>
-      <img src="assets/jornada.png" alt="kkkkkkkkkk" />
+      <img src="assets/jornada.png" alt="." />
       </div>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui
